--- a/index.html
+++ b/index.html
@@ -44,11 +44,11 @@
             <article class = "text">
                 
                 <h2>✔ Sobre min</h2>
-                    <p> Oi, me chamo Gabriel juvencio, tenho 24 anos sou de uberlnadia-MG,brasil.
+                    <p> Oi, meu nome é Gabriel Juvencio, tenho 24 anos e sou de Uberlândia, Minas Gerais, Brasil. 
                         <br>
-                        Sou tecnico em informatica e trabalho como analista de Infraestrutura e helpdesk.
+                       Sou técnico em informática e trabalho como analista de infraestrutura e helpdesk.
                         <br>
-                        Apaixonado por computadores venho me dedicando ao estudo por conta propria Programaçao em JS,HTML,CSS.
+                       Tenho uma paixão por computadores e tenho me dedicado ao estudo autodidata de programação em JavaScript, HTML e CSS.
                     </p>
                 
             </article>
